# tun

./: .cliff.toml  .dockerignore  .dprint.jsonc  .example.env  .gitignore  .nextest.toml  .sample.env  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  compose.yml  justfile  schema.graphql
.cargo-husky/hooks/: pre-push
.github/workflows/: ci.yml  release.yml
.sqlx/: query-26e7e05427bc7dabcd7815d27764fda2baf4cfe60a2d2d6ee2a1f773dccbbce2.json  query-525ba868984e37277539c23e2a7e0646bb475765ed88a3df8ec1859d87698358.json  query-6f540be5517aaffe1774bebe9a2c0eba835e11cd8e1b07ea44046ae795008704.json  query-db4ea962b1ec31a63fd4d631f36f7a96b823cc849a9b91eedd9281e2d5ef0ea0.json
entity/: Cargo.toml
entity/src/: lib.rs  prelude.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_user_table.rs  m20251119_093536_seed_user_data.rs
migrations/: 20260221023128_create_users.sql
migrations/2026-02-20-035854-0000_create_users/: up.sql
scripts/: compress-assets.sh  prepare-assets.sh
src/: app.rs  config.rs  context.rs  db.rs  lib.rs  logger.rs  main.rs  router.rs  routes.rs  schema.rs
src/domain/github/: mod.rs
src/domain/github/handler/: get_zen.rs  mod.rs
src/domain/github/service/: get_zen.rs  mod.rs
src/domain/meta/: entities.rs  mod.rs
src/domain/meta/handler/: get_meta.rs  mod.rs
src/domain/meta/model/: mod.rs
src/domain/meta/service/: get_meta.rs  mod.rs
src/domain/user/: entities.rs  mod.rs
src/domain/user/handler/: create_user.rs  delete_user.rs  find_user.rs  find_users.rs  mod.rs  update_user.rs
src/domain/user/model/: input.rs  mod.rs
src/domain/user/repository/: create_user.rs  delete_user.rs  find_user.rs  find_users.rs  update_user.rs
src/domain/user/service/: create_user.rs  delete_user.rs  find_user.rs  find_users.rs  mod.rs  update_user.rs
src/drivers/: github.rs
src/errors/: app.rs  mod.rs
src/handlers/: create_user.rs  delete_user.rs  find_user.rs  find_users.rs  get_health.rs  get_meta.rs  get_zen.rs  github.rs  health.rs  meta.rs  mod.rs  update_user.rs  user.rs
src/health/: query.rs
src/meta/: mod.rs  query.rs
src/meta/model/: mod.rs
src/models/: health.rs  meta.rs  user.rs
src/repos/: user.rs
src/repository/: create_user.rs  delete_user.rs  find_user.rs  find_users.rs  mod.rs  update_user.rs
src/services/: create_user.rs  delete_user.rs  find_user.rs  find_users.rs  get_meta.rs  get_zen.rs  github.rs  health.rs  meta.rs  mod.rs  update_user.rs  user.rs
tests/: health.rs  meta.rs  tests.hurl  user.rs
tests/api-collection/: test.sh  tests.hurl
tests/api-collection/meta/: health.hurl  meta.hurl
tests/api-collection/user/: create_user.hurl  delete_user.hurl  update_user.hurl  user.hurl  users.hurl
tests/common/: mod.rs
tests/health/: tests.rs
tests/meta/: schema.rs  tests.rs
