[package]
name = "tun"
version = "0.1.0"
authors = ["azzamsa <vcs@azzamsa.com>"]
categories = ["web-programming"]
edition = "2024"
exclude = ["/README.md"]
keywords = ["boilerplate"]
license = "MIT"
publish = false
repository = "https://github.com/azzamsa/tun"
rust-version = "1.91.1"
description = "Rust REST Template"

[dependencies]
axum = "0.8.7"
hyper = "1.8.1"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }

# Swagger Documentation
utoipa = { version = "5.4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

# Configurations
dotenvy = "0.15.7"

# Error
thiserror = "2.0"

# Logging
time = "0.3.44"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "time", "local-time"] }

serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
# git hooks
cargo-husky = { version = "1", features = ["user-hooks"] }

anyhow = "1.0"
serde_json = "1.0"
tower = { version = "0.5", features = ["util"] }

http-body-util = "0.1.0"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version}-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
